trabalhando no fluxo do pagamento